deverl repairs edit

--- a/WEB_UI/Areas/IDSMORS/Views/Home/ElectronicCards.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Home/ElectronicCards.cshtml
@@ -250,7 +250,7 @@
                                 <div class="form-group col-xs-6 has-feedback">
                                     <label for="year-wagon-create-wagon-edit" class="control-label">Год постройки:</label>
                                     <div class="input-group">
-                                        <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                         <input type="number" class="form-control" id="year-wagon-create-wagon-edit" name="year-wagon-create-wagon-edit" placeholder="">
                                         <span class="glyphicon form-control-feedback"></span>
                                     </div>
@@ -260,7 +260,7 @@
                                 <div class="form-group col-xs-3 has-feedback">
                                     <label for="carrying-capacity-wagon-edit" class="control-label">Грузоподъемность,т:</label>
                                     <div class="input-group">
-                                        <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-sound-7-1"></i></span>
                                         <input type="number" class="form-control" id="carrying-capacity-wagon-edit" placeholder="" name="carrying-capacity-wagon-edit" pattern="\d+(\.\d{1})?">
                                         <span class="glyphicon form-control-feedback"></span>
                                     </div>
@@ -268,7 +268,7 @@
                                 <div class="form-group col-xs-3 has-feedback">
                                     <label for="tara-wagon-edit" class="control-label">Тара, тонн:</label>
                                     <div class="input-group">
-                                        <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-sound-7-1"></i></span>
                                         <input type="number" class="form-control" id="tara-wagon-edit" name="tara-wagon-edit" placeholder="">
                                         <span class="glyphicon form-control-feedback"></span>
                                     </div>
@@ -276,7 +276,7 @@
                                 <div class="form-group col-xs-3 has-feedback">
                                     <label for="body-volume-wagon-edit" class="control-label">Объем кузова:</label>
                                     <div class="input-group">
-                                        <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-sound-7-1"></i></span>
                                         <input type="number" class="form-control" id="body-volume-wagon-edit" name="body-volume-wagon-edit" placeholder="">
                                         <span class="glyphicon form-control-feedback"></span>
                                     </div>
@@ -284,7 +284,7 @@
                                 <div class="form-group col-xs-3 has-feedback">
                                     <label for="axis-length-wagon-edit" class="control-label">Длина по осям,м:</label>
                                     <div class="input-group">
-                                        <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-sound-7-1"></i></span>
                                         <input type="number" class="form-control" id="axis-length-wagon-edit" name="axis-length-wagon-edit" placeholder="">
                                         <span class="glyphicon form-control-feedback"></span>
                                     </div>
@@ -302,7 +302,7 @@
                                 <div class="form-group col-xs-6 has-feedback">
                                     <label for="date-type-repairs-wagon-edit" class="control-label">Дата планируемого ремонта:</label>
                                     <div class="input-group">
-                                        <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                         <input type="datetime" class="form-control" id="date-type-repairs-wagon-edit" name="date-type-repairs-wagon-edit" placeholder="">
                                         <span class="glyphicon form-control-feedback"></span>
                                     </div>
@@ -331,7 +331,7 @@
                                 <div class="form-group col-xs-4 has-feedback">
                                     <label for="date-registration-wagon-edit" class="control-label">Дата последней регистрации:</label>
                                     <div class="input-group">
-                                        <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                         <input type="date" class="form-control" id="date-registration-wagon-edit" name="date-registration-wagon-edit" placeholder="">
                                         <span class="glyphicon form-control-feedback"></span>
                                     </div>
@@ -471,7 +471,7 @@
                             <div class="form-group col-xs-4 has-feedback">
                                 <label for="date-wagons-repairs-edit" class="control-label">Дата:</label>
                                 <div class="input-group">
-                                    <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                     <input type="text" class="form-control" id="date-wagons-repairs-edit" name="date-wagons-repairs-edit" placeholder="">
                                     <span class=" glyphicon form-control-feedback"></span>
                                 </div>
@@ -497,15 +497,15 @@
                             <div class="form-group col-xs-4 has-feedback">
                                 <label for="type-wagons-repairs-edit" class="control-label">Вид ремонта:</label>
                                 <div class="input-group">
-                                    <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
-                                    <input type="text" class="form-control" id="type-wagons-repairs-edit" name="type-wagons-repairs-edit" placeholder="" >
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-list"></i></span>
+                                    <select class="form-control" id="type-wagons-repairs-edit" name="type-wagons-repairs-edit" required="required"></select>
                                     <span class=" glyphicon form-control-feedback"></span>
                                 </div>
                             </div>
                             <div class="form-group col-xs-4 has-feedback">
                                 <label for="date-non-working-wagons-repairs-edit" class="control-label">Дата постановки в нер. парк:</label>
                                 <div class="input-group">
-                                    <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                     <input type="text" class="form-control" id="date-non-working-wagons-repairs-edit" name="date-non-working-wagons-repairs-edit" placeholder="">
                                     <span class=" glyphicon form-control-feedback"></span>
                                 </div>
@@ -513,8 +513,8 @@
                             <div class="form-group col-xs-4 has-feedback">
                                 <label for="condition-wagons-repairs-edit" class="control-label">Неисправность:</label>
                                 <div class="input-group">
-                                    <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
-                                    <input type="text" class="form-control" id="condition-wagons-repairs-edit" name="condition-wagons-repairs-edit" placeholder="" >
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-list"></i></span>
+                                    <select class="form-control" id="condition-wagons-repairs-edit" name="condition-wagons-repairs-edit"></select>
                                     <span class=" glyphicon form-control-feedback"></span>
                                 </div>
                             </div>
