end dever cards start test

--- a/WEB_UI/Areas/IDSMORS/Views/Home/ElectronicCards.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Home/ElectronicCards.cshtml
@@ -58,12 +58,12 @@
                 <div class="panel-control-top">
                     <div class="form-group row">
                         <div class="offset-sm-2 col-sm-12">
-                            <button type="button" id="bt-info-edit" class="btn btn-primary wagon-info-view">@IDSMORSResource.bt_edit_text</button>
+                            @{ Html.RenderAction("ElectronicCardsEdit", "Home", new { area = "IDSMORS" }); }
+                            @*<button type="button" id="bt-info-edit" class="btn btn-primary wagon-info-view">@IDSMORSResource.bt_edit_text</button>
                             <button type="button" id="bt-info-delete" class="btn btn-primary wagon-info-view">@IDSMORSResource.bt_delete_text</button>
                             <button type="button" id="bt-info-save" class="btn btn-primary wagon-info-edit">Сохранить</button>
                             <button type="button" id="bt-info-cancel" class="btn btn-primary wagon-info-edit">Отмена</button>
-
-                            <button type="button" id="bt-repairs-add" class="btn btn-primary wagon-repairs-view">Добавить</button>
+                            <button type="button" id="bt-repairs-add" class="btn btn-primary wagon-repairs-view">Добавить</button>*@
                         </div>
                     </div>
                     <div class="row wagon-view">
@@ -382,7 +382,9 @@
                             <legend> ДЕПОвский </legend>
                             <div class="row">
                                 <div class="form-group col-xs-12">
-                                    <button type="button" id="bt-depo-repairs-edit" class="btn btn-primary wagon-repairs-view">@IDSMORSResource.bt_edit_text</button>
+                                    @{ Html.RenderAction("ElectronicCardsEditDEPO", "Home", new { area = "IDSMORS" }); }
+                                    @*<button type="button" id="bt-depo-repairs-edit" class="btn btn-primary wagon-repairs-view">@IDSMORSResource.bt_edit_text</button>
+                                    <button type="button" id="bt-depo-repairs-delete" class="btn btn-primary wagon-repairs-view">@IDSMORSResource.bt_delete_text</button>*@
                                 </div>
                             </div>
                             <div class="row">
@@ -405,7 +407,9 @@
                             <legend> Капитальный </legend>
                             <div class="row">
                                 <div class="form-group col-xs-12">
-                                    <button type="button" id="bt-kap-repairs-edit" class="btn btn-primary wagon-repairs-view">@IDSMORSResource.bt_edit_text</button>
+                                    @{ Html.RenderAction("ElectronicCardsEditKap", "Home", new { area = "IDSMORS" }); }
+                                    @*<button type="button" id="bt-kap-repairs-edit" class="btn btn-primary wagon-repairs-view">@IDSMORSResource.bt_edit_text</button>
+                                    <button type="button" id="bt-kap-repairs-delete" class="btn btn-primary wagon-repairs-view">@IDSMORSResource.bt_delete_text</button>*@
                                 </div>
                             </div>
                             <div class="row">
@@ -427,7 +431,9 @@
                             <legend> Текущий </legend>
                             <div class="row">
                                 <div class="form-group col-xs-12">
-                                    <button type="button" id="bt-cur-repairs-edit" class="btn btn-primary wagon-repairs-view">@IDSMORSResource.bt_edit_text</button>
+                                    @{ Html.RenderAction("ElectronicCardsEditCur", "Home", new { area = "IDSMORS" }); }
+                                    @*<button type="button" id="bt-cur-repairs-edit" class="btn btn-primary wagon-repairs-view">@IDSMORSResource.bt_edit_text</button>
+                                    <button type="button" id="bt-cur-repairs-delete" class="btn btn-primary wagon-repairs-view">@IDSMORSResource.bt_delete_text</button>*@
                                 </div>
                             </div>
                             <div class="row">
