--- a/WEB_UI/Areas/IDSMORS/Views/Home/ParksWagons.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Home/ParksWagons.cshtml
@@ -35,9 +35,9 @@
                     <select class="form-control" id="select-park-wagon" name="select-park-wagon"></select>
                 </div>
                 <div class="form-group col-xs-12 col-sm-4">
-                    <button type="button" class="btn btn-warning">Добавить</button>
-                    <button type="button" class="btn btn-warning">Переименовать</button>
-                    <button type="button" class="btn btn-warning">Удалить</button>
+                    <button type="button" class="btn btn-warning" id="add-park">Добавить</button>
+                    <button type="button" class="btn btn-warning" id="edit-park">Переименовать</button>
+                    <button type="button" class="btn btn-warning" id="delete-park">Удалить</button>
                 </div>
             </div>
         </div>
