--- a/WEB_UI/Areas/IDSMORS/Views/Home/ParksWagons.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Home/ParksWagons.cshtml
@@ -25,82 +25,46 @@
 <input id="username" type="hidden" value="@User.Identity.Name" />
 
 
-<div class="container-fluid idsmors-report jumbotron">
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            <div class="row">
-                <div class="form-group col-sm-2 text-right">
+<div class="container-fluid idsmors-report">
+    <div class="card">
+        <div class="card-header bg-secondary text-white">
+            <div class="row wagon-view">
+                <div class="col-md-4 mb-3 text-right">
                     <label class="control-label">@IDSMORSResource.label_park_wagon_title:</label>
                 </div>
-                <div class="form-group col-sm-4">
+                <div class="col-md-4 mb-3">
                     <select class="form-control" id="select-park-wagon" name="select-park-wagon"></select>
                 </div>
-                <div class="form-group sm-4">
-                    <button type="button" class="btn btn-warning" id="add-park">Добавить</button>
-                    <button type="button" class="btn btn-warning" id="edit-park">Переименовать</button>
-                    <button type="button" class="btn btn-warning" id="delete-park">Удалить</button>
+                <div class="col-md-4 mb-3">
+                    <button type="button" class="btn btn-warning btn-lg" id="add-park">Добавить</button>
+                    <button type="button" class="btn btn-warning btn-lg" id="edit-park">Переименовать</button>
+                    <button type="button" class="btn btn-warning btn-lg" id="delete-park">Удалить</button>
                 </div>
             </div>
         </div>
-        <div class="panel-body">
-            <div class="row">
-                <table class='compact cell-border display' id="table-wagons" style="width:100%" cellpadding="0"></table>
-
+        <div class="card-body">
+            <div class="row wagon-view">
+                <div class="col-md-12 mb-3">
+                    <table class='compact cell-border display' id="table-wagons" style="width:100%" cellpadding="0"></table>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
 
-<div id="confirm-rfid-card" title="" class="table-confirm-rfid-card" style="display:none">
-    <form id="form-rfid-card">
+<div id="edit-park-name" title="" style="display:none">
+    <form id="form-park-name">
         <fieldset>
-            <table id="table-confirm-rfid-card" class="confirm-rfid-card table-striped">
-                <tr>
-                    <th>id карты :</th>
-                    <td><input id="id" name="id" type="text" disabled="disabled" class="confirm-input ui-widget-content ui-corner-all" /></td>
-                </tr>
-                <tr>
-                    <th>Номер карты :</th>
-                    <td><input id="Number" name="Number" type="text" disabled="disabled" class="confirm-input ui-widget-content ui-corner-all" /></td>
-                </tr>
-                <tr>
-                    <th>DriverName :</th>
-                    <td><input id="DriverName" name="DriverName" type="text" disabled="disabled" class="confirm-input ui-widget-content ui-corner-all" /></td>
-                </tr>
-                <tr>
-                    <th>Номер автомобиля :</th>
-                    <td><input id="AutoNumber" name="AutoNumber" type="text" disabled="disabled" class="confirm-input ui-widget-content ui-corner-all" /></td>
-                </tr>
-                <tr>
-                    <th>Код дебитора :</th>
-                    <td><input id="Debitor" name="Debitor" type="number" disabled="disabled" class="confirm-input ui-widget-content ui-corner-all" /></td>
-                </tr>
-                <tr>
-                    <th>Код транспортного средства :</th>
-                    <td><input id="Sn1" name="Sn1" type="text" disabled="disabled" class="confirm-input ui-widget-content ui-corner-all" /></td>
-                </tr>
-                <tr>
-                    <th>Модель автомобиля :</th>
-                    <td><input id="AutoModel" name="AutoModel" type="text" disabled="disabled" class="confirm-input ui-widget-content ui-corner-all" /></td>
-                </tr>
-                <tr>
-                    <th>Автоколона :</th>
-                    <td><input id="Street" name="Street" type="number" disabled="disabled" class="confirm-input ui-widget-content ui-corner-all" /></td>
-                </tr>
-                <tr>
-                    <th>House :</th>
-                    <td><textarea id="House" name="House" type="text" rows="3" disabled="disabled" class="ui-widget-content ui-corner-all"></textarea></td>
-                </tr>
-                <tr>
-                    <th>Owner :</th>
-                    <td><input id="Owner" name="Owner" type="text" disabled="disabled" class="confirm-input ui-widget-content ui-corner-all" /></td>
-                </tr>
-                <tr>
-                    <th>Активация карты :</th>
-                    <td><input id="Active" name="Active" type="checkbox" disabled="disabled" class="confirm-input ui-widget-content ui-corner-all" /></td>
-                </tr>
-            </table>
+            <div class="form-row">
+                <div class="col-md-12 mb-3">
+                    <label for="state-wagon-view">Парк подвижного состава:</label>
+                    <input type="text" class="form-control" id="name-park-wagon" placeholder="">
+                    <div class="invalid-feedback">
+                        Это поле не может быть пустым
+                    </div>
+                </div>
+            </div>
             <!-- Allow form submission with keyboard without duplicating the dialog button -->
             <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
         </fieldset>
